--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
     <!-- Google Analytics code goes just below here (check PRJ4 Guide for details) -->
 
     <!-- End of Google Analytics code -->
-
-  </head>
+    <style>
+      body {
+          background-image: url('images/background.jpg');
+          background-size: cover;
+          background-position: center;
+          background-attachment: fixed;
+      }
+    </style>
+</head>
+   
   <body class="h-100 d-flex flex-column">
 
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
