--- a/index.html
+++ b/index.html
@@ -1,89 +1,142 @@
 <!doctype html>
 <html lang="en" class="h-100">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
     <!-- Own Styles -->
     <link rel="stylesheet" href="css/styles.css">
-
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
+    <!-- FontAwesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <title>PRJ4 Base Group Template &mdash; Landing Page</title>
-
-    <!-- Google Analytics code goes just below here (check PRJ4 Guide for details) -->
-
-    <!-- End of Google Analytics code -->
     <style>
-      body {
-          background-image: url('images/background.jpg');
-          background-size: cover;
-          background-position: center;
-          background-attachment: fixed;
-      }
+        body {
+            background-image: url('images/background.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+        }
     </style>
 </head>
-   
-  <body class="h-100 d-flex flex-column">
-
-    <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
+<body class="h-100 d-flex flex-column">
+    <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="images/2gether-transparent.png" width="40" alt="Breda University of Applied Sciences">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="example.html">Example</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                UX Patterns
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="hero.html">Hero Section</a></li>
-                <li><a class="dropdown-item" href="carousel.html">Carousel</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="two-columns.html">Two-column Layout</a></li>
-                <li><a class="dropdown-item" href="cards.html">Cards</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://buas-media-interactive.github.io/prj4-guide/" target="_blank">PRJ4 Guide</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="corporate.html">Corporate</a>
-            </li>
-          </ul>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="./images/small-logo.svg" width="200" alt="Breda University of Applied Sciences">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="example.html">Example</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            UX Patterns
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="hero.html">Hero Section</a></li>
+                            <li><a class="dropdown-item" href="carousel.html">Carousel</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="two-columns.html">Two-column Layout</a></li>
+                            <li><a class="dropdown-item" href="cards.html">Cards</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://buas-media-interactive.github.io/prj4-guide/" target="_blank">PRJ4 Guide</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="corporate.html">Corporate</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
     </nav>
     <!-- End of navigation bar -->
-
     <!-- Start of main placeholder in landing page -->
     <main class="h-100 d-flex flex-column justify-content-center align-items-center">
-      <img class="mb-4" src="images/2gether-transparent.png">
-      <h1>2Gether</h1>
-      <h5 class="fst-italic mb-5">Coming soon…</h5>
-      <div class="container text-center">
-        <p>This is a page you can use as a placeholder for your future website.</p>
-        <p>Once published (which should be at the end of week 5 of the project), it can be fully integrated within your marketing campaign.</p>
-        <p>You will then replace this landing page by a full website.</p>
-        <p>To build your website, you can start with the <a href="example.html">example</a> or pick and mix elements from the UX pattern pages of this website (check menu above).</p>
-      </div>
+        <img class="mb-4" src="images/logo.svg" width="700"> 
+        <h1 class="fst-italic mb-5">Coming soon...</h1>
+        <div aria-busy="true" aria-describedby="progress-bar">
+          <!-- content is for this region is loading -->
+        </div>
+        <progress id="progress-bar" aria-label="Content loading…"></progress>  
+        <br>
+        <br>
     </main>
     <!-- End of main placeholder -->
-
-  </body>
+    <!-- Start of Footer -->
+    <footer class="footer">
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <div class="me-5 d-none d-lg-block">
+                <span><strong>Check out our social media:</strong></span>
+            </div>
+            <div>
+                <a href="" class="footer-a">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="" class="footer-a">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="" class="footer-a">
+                    <i class="fab fa-google"></i>
+                </a>
+                <a href="" class="footer-a">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="" class="footer-a">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="" class="footer-a">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+        </section>
+        <section class="">
+            <div class="container text-center text-md-start mt-5">
+                <div class="row mt-3">
+                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                      <h6 class="text-uppercase fw-bold mb-4">
+                        <i class="fas fa-bolt me-3"></i>AMPLIFY
+                    </h6>
+                    <p>Here we can add some fancy text.</p>
+                    </div>
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Content
+                        </h6>
+                        <p>
+                            <a href="#!" class="footer-a">Example</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="footer-a">Corporate</a>
+                        </p>
+                    </div>
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                      <h6 class="text-uppercase fw-bold mb-4">
+                          Contact
+                      </h6>
+                      <p><i class="fas fa-home me-3"></i> The Netherlands, Breda</p>
+                      <p style="display: flex; align-items: center;">
+                          <i class="fas fa-envelope me-3"></i>
+                          <span>amplify.branddevelopment@gmail.com</span>
+                      </p>
+                      <p><i class="fas fa-phone me-3"></i> + 31 224 577 98</p>
+                  </div>
+                  
+                </div>
+            </div>
+        </section>
+    </footer>
+    <!-- End of Footer -->
+</body>
 </html>
