--- a/index.html
+++ b/index.html
@@ -56,45 +56,41 @@
     </nav>
     <!-- End of navigation bar -->
 
-    <!-- Conținutul paginii tale -->
+    <!--Start of the content-->
     <div class="content">
-        <!-- Elementele tale HTML aici -->
+      <div class="container my-5">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-8 text-center">
         <div class="h-100 d-flex flex-column justify-content-center align-items-center">
             <img class="mb-4" src="images/logo.svg" width="700"> 
-            <h1 class="fst-italic mb-5">Coming soon...</h1>
+            <h1 class="coming-italic mb-2" style="margin-bottom: 20px;">Coming soon...</h1>
             <div aria-busy="true" aria-describedby="progress-bar">
                 <div class="progress"></div>
             </div>
             <progress id="progress-bar" aria-label="Content loading…"></progress>  
             <br>
             <br>
+            </div>
+            </div>
         </div>
+      </div>
     </div>
-
-    <!-- Start of Footer -->
+    <!--End of the content-->
        <!-- Start of Footer -->
        <footer class="footer">
+        <div class="container">
+          <div class="row">
+          </div>
+        </div>
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
             <div class="me-5 d-none d-lg-block">
                 <span><strong>Check out our social media:</strong></span>
             </div>
             <div>
-                <a href="" class="footer-a">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="" class="footer-a">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="" class="footer-a">
-                    <i class="fab fa-google"></i>
-                </a>
-                <a href="" class="footer-a">
+                <a href="https://www.instagram.com/amplifynetherlands/" class="footer-a">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="" class="footer-a">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="" class="footer-a">
+                <a href="https://github.com/anadondea/Amplify.github.io" class="footer-a">
                     <i class="fab fa-github"></i>
                 </a>
             </div>
@@ -113,10 +109,10 @@
                             Content
                         </h6>
                         <p>
-                            <a href="#!" class="footer-a">Example</a>
+                          <a class="footer-a" aria-current="page" href="example.html">Example</a>
                         </p>
                         <p>
-                            <a href="#!" class="footer-a">Corporate</a>
+                          <a class="footer-a" href="corporate.html">Corporate</a>
                         </p>
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
