--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-8 text-center">
         <div class="h-100 d-flex flex-column justify-content-center align-items-center">
-            <img class="mb-4" src="images/logo.svg" width="700"> 
+          <img class="img-fluid mb-4" src="images/logo.svg" alt="Logo"> 
             <h1 class="coming-italic mb-2" style="margin-bottom: 20px;">Coming soon...</h1>
             <div aria-busy="true" aria-describedby="progress-bar">
                 <div class="progress"></div>
