startup our story page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="example.html">Example</a>
+            <a class="nav-link active" aria-current="page" href="our-story.html">Our story</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -110,7 +110,7 @@
                             Content
                         </h6>
                         <p>
-                          <a class="footer-a" aria-current="page" href="example.html">Example</a>
+                          <a class="footer-a" aria-current="page" href="our-story.html">Our story</a>
                         </p>
                         <p>
                           <a class="footer-a" href="corporate.html">Corporate</a>
