--- a/our-story.html
+++ b/our-story.html
@@ -85,6 +85,8 @@
       </div>
     </div>
   </div>
+      </div>
+    </div>
 
   <!-- Full height who we are section with reverse order -->
   <div class="container-fluid p-0">
