design our story page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>AMPLIFY website</title>
 </head> 
 <body class="background">
-   
+  
    <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
    <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
@@ -121,9 +121,8 @@
                           Contact
                       </h6>
                       <p><i class="fas fa-home me-3"></i> The Netherlands, Breda</p>
-                      <p style="display: flex; align-items: center;">
-                          <i class="fas fa-envelope me-3"></i>
-                          <span>amplify.branddevelopment@gmail.com</span>
+                      <p class="d-flex justify-content-center align-items-center">
+                      <p> <i class="fas fa-envelope me-3"></i> amplify.branddevelopment@gmail.com</p>
                       </p>
                       <p><i class="fas fa-phone me-3"></i> + 31 224 577 98</p>
                   </div>
