--- a/our-story.html
+++ b/our-story.html
@@ -20,7 +20,7 @@
     <!-- End of Google Analytics code -->
 
   </head>
-  <body class="h-100 d-flex flex-column">
+  <body class="h-100 d-flex flex-column bg-custom-grey">
 
     <!-- Navigation bar, adapted from https://getbootstrap.com/docs/5.1/components/navbar/ -->
    <nav class="navbar navbar-expand-lg navbar-light">
@@ -64,22 +64,22 @@
   <!-- End of navigation bar -->
 
     <div class="container-fluid">
-      <div class="row bg-success bg-opacity-25">
+      <div class="row bg-custom-purple bg-opacity-25">
 
      <!-- Full height hero section -->
   <div class="container-fluid p-0">
     <div class="row full-height align-items-center m-0">
       <div class="col-lg-6 p-0">
-        <video autoplay loop muted class="w-100 h-100">
+        <video autoplay loop muted>
           <source src="https://www.buas.nl/sites/default/files/2023-09/corporate_video.mp4" type="video/mp4">
         </video>
       </div>
-      <div class="col-lg-6 text-center d-flex align-items-center justify-content-center">
+      <div class="col-lg-6 text-center d-flex align-items-center justify-content-center our-story-heading-text">
         <div>
-          <h1 class="fw-bold white-shadow">All 2gether Now!</h1>
-          <h2 class="fw-bold white-shadow">The online platform for togetherness!</h2>
+          <h1 class="fw-bold our-story-text">All 2gether Now!</h1>
+          <h2 class="fw-bold our-story-text">The online platform for togetherness!</h2>
           <p class="mt-2">
-            <a href="#" class="btn btn-lg btn-primary m-1">Join now!</a>
+            <a href="#" class="btn btn-lg btn-primary m-1 our-story-heading-text-button button-color">Join now!</a>
           </p>
         </div>
       </div>
@@ -89,14 +89,14 @@
     </div>
 
   <!-- Full height who we are section with reverse order -->
-  <div class="container-fluid p-0">
+  <div class="container-fluid p-0 bg-custom-grey">
     <div class="row full-height align-items-center m-0 flex-row-reverse">
       <div class="col-lg-6 p-0">
-        <video autoplay loop muted class="w-100 h-100">
+        <video autoplay loop muted>
           <source src="https://www.buas.nl/sites/default/files/2023-09/corporate_video.mp4" type="video/mp4">
         </video>
       </div>
-      <div class="col-lg-6 text-center d-flex align-items-center justify-content-center">
+      <div class="col-lg-6 text-center d-flex align-items-center justify-content-center our-story-body-text">
         <div>
           <h2>Who we are</h2>
           <p>2gether is a platform that connects people who share common interests, passions, and goals.</p>
@@ -107,9 +107,9 @@
     </div>
   </div>
 
-    <div class="container pt-3 pb-2">
+    <div class="bg-custom-grey">
       <div class="row justify-content-center">
-        <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center">
+        <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center our-story-body-text">
           <h2>Our vision</h2>
           <p>
             At 2gether, we envision a world where diversity thrives, and connections are boundless. Our online platform is a vibrant space where individuals from all walks of life unite to discover, share, and fulfil their unique needs and aspirations. We are dedicated to fostering a sense of belonging, breaking down barriers, and creating a global community where every person can find what they seek, creating meaningful connections that transcend boundaries. 2gether is more than just a platform; it's a celebration of the richness that comes from bringing people together, empowering them to explore, connect, and build a future where unity knows no limits.
@@ -117,10 +117,9 @@
         </div>
       </div>
     </div>
-
     <div class="bg-dark bg-opacity-10 py-3">
-      <div class="container">
-        <div class="row justify-content-center text-center g-2">
+      <div class="bg-custom-grey">
+        <div class="row justify-content-center text-center g-2 our-story-body-text">
           <div class="col-12">
             <h2>Our values</h2>
           </div>
@@ -131,7 +130,7 @@
             <h4 class="rounded-5 border border-warning bg-warning py-4 bg-opacity-25 fs-4">Quality</h4>
           </div>
           <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <h4 class="rounded-5 border border-success bg-success py-4 bg-opacity-25 fs-4">Inclusivity</h4>
+            <h4 class="rounded-5 border border-success bg-custom py-4 bg-opacity-25 fs-4">Inclusivity</h4>
           </div>
           <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <h4 class="rounded-5 border border-info bg-info py-4 bg-opacity-25 fs-4">Happiness</h4>
@@ -146,7 +145,7 @@
             <h4 class="rounded-5 border border-warning bg-warning py-4 bg-opacity-25 fs-4">Community</h4>
           </div>
           <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <h4 class="rounded-5 border border-success bg-success py-4 bg-opacity-25 fs-4">Belonging</h4>
+            <h4 class="rounded-5 border border-success bg-custom py-4 bg-opacity-25 fs-4">Belonging</h4>
           </div>
         </div>
       </div>
