--- a/our-story.html
+++ b/our-story.html
@@ -69,12 +69,12 @@
      <!-- Full height hero section -->
   <div class="container-fluid p-0">
     <div class="row full-height align-items-center m-0">
-      <div class="col-lg-6 p-0">
-        <video autoplay loop muted>
-          <source src="https://www.buas.nl/sites/default/files/2023-09/corporate_video.mp4" type="video/mp4">
+      <div class="col-lg-8 p-0">
+        <video autoplay loop muted class="video-full-height">
+          <source src="images/animation1.mp4" type="video/mp4">
         </video>
       </div>
-      <div class="col-lg-6 text-center d-flex align-items-center justify-content-center our-story-heading-text">
+      <div class="col-lg-4 text-center d-flex align-items-center justify-content-center our-story-heading-text">
         <div>
           <h1 class="fw-bold our-story-text">All 2gether Now!</h1>
           <h2 class="fw-bold our-story-text">The online platform for togetherness!</h2>
