landing page fixes

--- a/index.html
+++ b/index.html
@@ -126,9 +126,11 @@
                           Contact
                       </h6>
                       <p><i class="fas fa-home me-3"></i> The Netherlands, Breda</p>
-                      <p class="d-flex justify-content-center align-items-center">
-                      <p><i class="fas fa-envelope me-3"></i> amplify.branddevelopment@gmail.com</p>
-                      </p>
+                      <div class="d-flex justify-content-center align-items-center">
+                        <i class="fas fa-envelope me-3"></i>
+                        <span>amplify.branddevelopment@gmail.com</span>
+                    </div>
+                    <br>
                       <p><i class="fas fa-phone me-3"></i> + 31 224 577 98</p>
                   </div>
                   
