--- a/our-story.html
+++ b/our-story.html
@@ -70,7 +70,7 @@
     <div class="row full-height align-items-center m-0">
       <div class="col-lg-8 p-0">
         <video autoplay loop muted class="video-full-height">
-          <source src="images/animation1.mp4" type="video/mp4">
+          <source src="images/animation.mp4" type="video/mp4">
         </video>
       </div>
       <div class="col-lg-4 text-center d-flex align-items-center justify-content-center our-story-heading-text">
@@ -96,13 +96,13 @@
           <div id="carouselLeft" class="carousel slide" data-bs-interval="6000">
               <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <img src="images/caroll1.jpg" class="d-block w-100" alt="Slide 1 Left">
+                      <img src="images/caroll.jpg" class="d-block w-100" alt="Slide 1 Left">
                   </div>
                   <div class="carousel-item">
-                      <img src="images/lars1.jpg" class="d-block w-100" alt="Slide 2 Left">
+                      <img src="images/lars.jpg" class="d-block w-100" alt="Slide 2 Left">
                   </div>
                   <div class="carousel-item">
-                      <img src="images/atina1.jpg" class="d-block w-100" alt="Slide 3 Left">
+                      <img src="images/atina.jpg" class="d-block w-100" alt="Slide 3 Left">
                   </div>
                   <div class="carousel-item">
                     <img src="images/ana.jpg" class="d-block w-100" alt="Slide 4 Left">
