body fonts and footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <!-- FontAwesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <!--Embedeed fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=New+Rocker&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>AMPLIFY website</title>
 </head> 
 <body class="background">
@@ -89,17 +97,17 @@
           </div>
         </div>
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-            <div class="me-5 d-none d-lg-block">
+            <div class="me-5 d-none d-lg-block footer-item">
                 <span><strong>Check out our social media:</strong></span>
             </div>
-            <div>
-                <a href="https://www.instagram.com/amplifynetherlands/" class="footer-a">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="https://github.com/anadondea/Amplify.github.io" class="footer-a">
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
+            <div class="social-icons">
+              <a href="https://www.instagram.com/amplifynetherlands/" class="footer-a">
+                  <i class="fab fa-instagram"></i>
+              </a>
+              <a href="https://github.com/anadondea/Amplify.github.io" class="footer-a">
+                  <i class="fab fa-github"></i>
+              </a>
+            </div>            
         </section>
         <section class="">
             <div class="container text-center text-md-start mt-5">
@@ -108,32 +116,31 @@
                       <h6 class="text-uppercase fw-bold mb-4">
                         <i class="fas fa-bolt me-3"></i>AMPLIFY
                     </h6>
-                    <p>Here we can add some fancy text.</p>
+                    <p class="footer-item">Here we can add some fancy text.</p>
                     </div>
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            Content
-                        </h6>
-                        <p>
-                          <a class="footer-a" aria-current="page" href="our-story.html">Our story</a>
-                        </p>
-                        <p>
-                          <a class="footer-a" href="corporate.html">Corporate</a>
-                        </p>
-                    </div>
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4 text-center">
+                      <h6 class="text-uppercase fw-bold mb-4 footer-text">
+                          Content
+                      </h6>
+                      <p>
+                        <a class="footer-a" aria-current="page" href="our-story.html">Our story</a>
+                      </p>
+                      <p>
+                        <a class="footer-a" href="corporate.html">Corporate</a>
+                      </p>
+                    </div>                    
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                      <h6 class="text-uppercase fw-bold mb-4">
+                      <h6 class="text-uppercase fw-bold mb-4 footer-item footer-text">
                           Contact
                       </h6>
-                      <p><i class="fas fa-home me-3"></i> The Netherlands, Breda</p>
-                      <div class="d-flex justify-content-center align-items-center">
-                        <i class="fas fa-envelope me-3"></i>
-                        <span>amplify.branddevelopment@gmail.com</span>
-                    </div>
-                    <br>
-                      <p><i class="fas fa-phone me-3"></i> + 31 224 577 98</p>
-                  </div>
-                  
+                      <p class="footer-text"><i class="fas fa-home me-3 footer-item"></i> The Netherlands, Breda</p>
+                     <div class="d-flex justify-content-center align-items-center">
+                     <i class="fas fa-envelope me-3 footer-item"></i>
+                     <span class="footer-text">amplify.branddevelopment@gmail.com</span>
+                     </div>
+                     <br>
+                     <p class="footer-text"><i class="fas fa-phone me-3 footer-item"></i> + 31 224 577 98</p>
+                     </div>
                 </div>
             </div>
         </section>
