--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
         </div>
       </div>
     </div>
+
+    <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" title="Popover title" data-bs-content="Acesta este conținutul popover-ului." data-bs-placement="right">
+      Apasă pentru popover
+    </button>
+    
     <!--End of the content-->
        <!-- Start of Footer -->
        <footer class="footer">
@@ -148,5 +153,12 @@
     <!-- End of Footer -->
 
   </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+  var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+    return new bootstrap.Popover(popoverTriggerEl)
+  })
+</script>
 </body>
 </html>
