--- a/our-story.html
+++ b/our-story.html
@@ -157,7 +157,7 @@
      <div class="container">
       <div class="row justify-content-center text-center g-2 our-story-body-text">
         <div class="col-12">
-          <h2>Our values</h2>
+          <h2 class="our-values-title">Our values</h2>
       <div class="row">
         <div class="col-md-3">
           <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-purple" data-bs-toggle="popover" data-bs-content="Through our differences, hard rock connects us all. Everything is better when we can experience the raw, unfiltered thrill of live music together. Amplify strives to help form these connections with other fans, creating unforgettable memories." 
