--- a/corporate.html
+++ b/corporate.html
@@ -425,6 +425,8 @@
       </div>
         </div>
       </div>
+        </div>
+      </div>
     </main>
 <!-- Start of Footer -->
 <footer class="footer">
